move assests and css folders into html

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link href="../bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- BC Developers' Exchange Helpers theme -->
-    <link href="../css/bcdevexchange-theme-helpers.css" rel="stylesheet">
+    <link href="css/bcdevexchange-theme-helpers.css" rel="stylesheet">
 
     <!-- BC Developers' Exchange theme -->
-    <link href="../css/bcdevexchange-theme.css" rel="stylesheet">
+    <link href="css/bcdevexchange-theme.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -41,7 +41,7 @@
 
         <!--<div class="bcde-homepage__content col-md-11"> -->
           <header class="clearfix">
-            <a class="bcde-header__logo" href="" title="BC Developers' Exchange"><img src="../assets/bcde-logo.png" alt="BC Deverlopers' Exchange Logo"></a>
+            <a class="bcde-header__logo" href="" title="BC Developers' Exchange"><img src="assets/bcde-logo.png" alt="BC Deverlopers' Exchange Logo"></a>
             <nav class="bcde-header__navigation">
               <ul class="nav nav-pills" role="tablist">
                 <li><a href="" title="About">About</a></li>
@@ -110,7 +110,7 @@
         </ul>
       </div>
 
-      <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="../assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
+      <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
     </footer>
   <body>
 </html>
