add styles for styling sections

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   </head>
   <body>
 
+    <div class="container">
+
       <div class="bcde-header clearfix">
 
         <!-- <div class="bcde-l-homepage__side col-md-1">
@@ -56,61 +58,70 @@
 
       </div>
 
-    <section>
-      About
+      <section class="bcde-l-homepage__section row">
 
-      <h2>Finding new ways for innovators, developers, and government to work together.</h2>
+        <div class="bcde-l-homepage__side col-md-1">
+          About
+        </div>
 
-      <p>The goals: grow B.C.'s tech economy, improve how government develops digital products, and make services for British Columbians better.</p>
+        <div class="bcde-l-homepage__content col-md-11">
 
-      <p>To those ends, the BC Developers' Exchange is:</p>
+          <h2>Finding new ways for innovators, developers, and government to work together.</h2>
 
-      <ul>
-        <li>Creating faster ways for the public sector to acquire software from the tech community</li>
-        <li>Matching the business needs of government organizations in B.C. with innovations from B.C.'s technology industry</li>
-        <li>Sharing government digital resources - code, data and APIs - that entrepreneurs can use to seed their businesses.</li>
-      </ul>
+          <p>The goals: grow B.C.'s tech economy, improve how government develops digital products, and make services for British Columbians better.</p>
 
-      Learn more
+          <p>To those ends, the BC Developers' Exchange is:</p>
 
-    </section>
+          <ul>
+            <li>Creating faster ways for the public sector to acquire software from the tech community</li>
+            <li>Matching the business needs of government organizations in B.C. with innovations from B.C.'s technology industry</li>
+            <li>Sharing government digital resources - code, data and APIs - that entrepreneurs can use to seed their businesses.</li>
+          </ul>
 
+          <p><a href="" title="Learn more">Learn more</a></p>
 
-    <section>
-      Code with us
+        </div>
 
-      <h2>Code with us.</h2>
-      <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire developers to cut the code government needs. Instead of a bunch of paperwork, developers work directly in GitHub and get paid a fixed fee if their code meets the acceptance criteria.</p>
-      <p>Read about what <a href="we've been learning">we've been learning</a> and how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a> to  find work.</p>
+      </section>
 
-      <a href="" title="Search Opportunities">Search Opportunities</a>
-    </section>
+      <section class="bcde-l-homepage__section row">
 
-    <section>
+        <div class="bcde-l-homepage__side col-md-1">
+          Code with us
+        </div>
 
-    </section>
+        <div class="bcde-l-homepage__content col-md-11">
 
+          <h2>Code with us.</h2>
+          <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire developers to cut the code government needs. Instead of a bunch of paperwork, developers work directly in GitHub and get paid a fixed fee if their code meets the acceptance criteria.</p>
+          <p>Read about what <a href="we've been learning">we've been learning</a> and how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a> to  find work.</p>
 
-    <footer class="clearfix">
+          <a href="" title="Search Opportunities">Search Opportunities</a>
+        </div>
+      </section>
 
-      <div class="bcde-footer__navigation">
-        <ul class="nav nav-pills">
-          <li><a href="" title="About">About</a></li>
-          <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
-          <li><a href="" title="Open APIs">Open APIs</a</li>
-          <li><a href="" title="Kick Start Program">Kick Start Program</a</li>
-          <li><a href="" title="Roadmap">Roadmap</a></li>
-        </ul>
+      <footer class="clearfix">
 
-        <ul class="nav nav-pills">
-          <li><a href="" title="Blog">Blog</a></li>
-          <li><a href="" title="Resources">Resources</a></li>
-          <li><a href="" title="Legal">Legal</a></li>
-          <li><a href="" title="Contact">Contact</a></li>
-        </ul>
-      </div>
+        <div class="bcde-footer__navigation">
+          <ul class="nav nav-pills">
+            <li><a href="" title="About">About</a></li>
+            <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
+            <li><a href="" title="Open APIs">Open APIs</a</li>
+            <li><a href="" title="Kick Start Program">Kick Start Program</a</li>
+            <li><a href="" title="Roadmap">Roadmap</a></li>
+          </ul>
 
-      <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
-    </footer>
+          <ul class="nav nav-pills">
+            <li><a href="" title="Blog">Blog</a></li>
+            <li><a href="" title="Resources">Resources</a></li>
+            <li><a href="" title="Legal">Legal</a></li>
+            <li><a href="" title="Contact">Contact</a></li>
+          </ul>
+        </div>
+
+        <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
+      </footer>
+
+    </div>
   <body>
 </html>
