add tweaks to adjust mobile footer nav

--- a/index.html
+++ b/index.html
@@ -96,30 +96,41 @@
           <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire developers to cut the code government needs. Instead of a bunch of paperwork, developers work directly in GitHub and get paid a fixed fee if their code meets the acceptance criteria.</p>
           <p>Read about what <a href="we've been learning">we've been learning</a> and how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a> to  find work.</p>
 
-          <a href="" title="Search Opportunities">Search Opportunities</a>
+          <p><a href="" title="Search Opportunities">Search Opportunities</a></p>
         </div>
       </section>
 
-      <footer class="clearfix">
+      <footer class="bcde-footer row">
 
-        <div class="bcde-footer__navigation">
-          <ul class="nav nav-pills">
-            <li><a href="" title="About">About</a></li>
-            <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
-            <li><a href="" title="Open APIs">Open APIs</a</li>
-            <li><a href="" title="Kick Start Program">Kick Start Program</a</li>
-            <li><a href="" title="Roadmap">Roadmap</a></li>
-          </ul>
-
-          <ul class="nav nav-pills">
-            <li><a href="" title="Blog">Blog</a></li>
-            <li><a href="" title="Resources">Resources</a></li>
-            <li><a href="" title="Legal">Legal</a></li>
-            <li><a href="" title="Contact">Contact</a></li>
-          </ul>
+        <div class="bcde-footer__logo-container col-md-1">
+          <a href="" class="bcde-footer__logo">
+            <img src="assets/logo-image.png" alt="BC Developers' Exchange Logo"/>
+          </a>
         </div>
 
-        <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
+
+        <div class="col-md-9">
+          <div class="bcde-footer__navigation">
+            <ul class="nav nav-pills">
+              <li><a href="" title="About">About</a></li>
+              <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
+              <li><a href="" title="Open APIs">Open APIs</a</li>
+              <li><a href="" title="Kick Start Program">Kick Start Program</a</li>
+              <li><a href="" title="Roadmap">Roadmap</a></li>
+            </ul>
+
+            <ul class="nav nav-pills">
+              <li><a href="" title="Blog">Blog</a></li>
+              <li><a href="" title="Resources">Resources</a></li>
+              <li><a href="" title="Legal">Legal</a></li>
+              <li><a href="" title="Contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="bcde-footer__logo-container col-md-2">
+          <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
+        </div>
       </footer>
 
     </div>
