adjust temp logo size to 50px

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
 
         <div class="col-md-9">
-          <div class="bcde-footer__navigation">
-            <ul class="nav nav-pills">
+          <div class="bcde-footer__navigation-container">
+            <ul class="nav nav-pills bcde-footer__navigation">
               <li><a href="" title="About">About</a></li>
               <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
               <li><a href="" title="Open APIs">Open APIs</a</li>
@@ -119,7 +119,7 @@
               <li><a href="" title="Roadmap">Roadmap</a></li>
             </ul>
 
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills bcde-footer__navigation">
               <li><a href="" title="Blog">Blog</a></li>
               <li><a href="" title="Resources">Resources</a></li>
               <li><a href="" title="Legal">Legal</a></li>
