use only image logo on header + add hamburger icon

--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
 
     <div class="container">
 
-      <div class="bcde-header clearfix">
+      <header class="bcde-header row">
 
-        <!-- <div class="bcde-l-homepage__side col-md-1">
-          <div class="fake-logo"></div>
-        </div> -->
+        <div class="col-md-1 hidden-sm">
+          <a href="" class="bcde-header__logo">
+            <img src="assets/logo-image.png" alt="BC Developers' Exchange Logo"/>
+          </a>
+        </div>
 
-        <!--<div class="bcde-homepage__content col-md-11"> -->
-          <header class="clearfix">
-            <a class="bcde-header__logo" href="" title="BC Developers' Exchange"><img src="assets/bcde-logo.png" alt="BC Deverlopers' Exchange Logo"></a>
-            <nav class="bcde-header__navigation">
+        <div class="bcde-l-homepage__content col-md-11">
+
+              <span class="glyphicon glyphicon-menu-hamburger visible-sm-block" aria-hidden="true"></span>
               <ul class="nav nav-pills" role="tablist">
                 <li><a href="" title="About">About</a></li>
                 <li><a href="" title="Open Opportunities">Open Opportunities</a></li>
@@ -53,10 +54,10 @@
                 <li><a href="" title="Roadmap">Roadmap</a></li>
               </ul>
             </nav>
-          </header>
-        <!-- </div> -->
 
-      </div>
+        </div>
+
+      </header>
 
       <section class="bcde-l-homepage__section row">
 
