add tweaks for desktop nav styles

--- a/index.html
+++ b/index.html
@@ -37,23 +37,26 @@
 
       <header class="bcde-header row">
 
-        <div class="col-md-1 hidden-sm">
+        <div class="col-md-1 bcde-header__logo-container">
           <a href="" class="bcde-header__logo">
             <img src="assets/logo-image.png" alt="BC Developers' Exchange Logo"/>
           </a>
         </div>
 
-        <div class="bcde-l-homepage__content col-md-11">
+        <div class="bcde-l-homepage__content col-md-11 clearfix">
+
+              <a class="bcde-header__logo__text">BC Developers' Exchange</a>
 
               <span class="glyphicon glyphicon-menu-hamburger visible-sm-block" aria-hidden="true"></span>
-              <ul class="nav nav-pills" role="tablist">
-                <li><a href="" title="About">About</a></li>
-                <li><a href="" title="Open Opportunities">Open Opportunities</a></li>
-                <li><a href="" title="Open APIs">Open APIs</a></li>
-                <li><a href="" title="Kick Start Program">Kick Start Program</a></li>
-                <li><a href="" title="Roadmap">Roadmap</a></li>
-              </ul>
-            </nav>
+              <nav class="bcde-header__navigation">
+                <ul class="nav nav-pills" role="tablist">
+                  <li><a href="" title="About">About</a></li>
+                  <li><a href="" title="Open Opportunities">Open Opportunities</a></li>
+                  <li><a href="" title="Open APIs">Open APIs</a></li>
+                  <li><a href="" title="Kick Start Program">Kick Start Program</a></li>
+                  <li><a href="" title="Roadmap">Roadmap</a></li>
+                </ul>
+              </nav>
 
         </div>
 
