add mobile nav preliminary styles

--- a/index.html
+++ b/index.html
@@ -43,13 +43,20 @@
           </a>
         </div>
 
-        <div class="bcde-l-homepage__content col-md-11 clearfix">
+        <div class="bcde-l-header__content col-md-11 clearfix">
+
+              <a class="bcde-header__navigation-toggle-mobile" href="">
+                <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+              </a>
+
+              <a href="" class="bcde-header__logo-mobile-container">
+                <img class="bcde-header__logo-mobile" src="assets/logo-image.png" alt="BC Developers' Exchange Logo"/>
+              </a>
 
               <a class="bcde-header__logo__text">BC Developers' Exchange</a>
 
-              <span class="glyphicon glyphicon-menu-hamburger visible-sm-block" aria-hidden="true"></span>
-              <nav class="bcde-header__navigation">
-                <ul class="nav nav-pills" role="tablist">
+              <nav class="bcde-header__navigation-container">
+                <ul class="nav nav-pills bcde-header__navigation" role="tablist">
                   <li><a href="" title="About">About</a></li>
                   <li><a href="" title="Open Opportunities">Open Opportunities</a></li>
                   <li><a href="" title="Open APIs">Open APIs</a></li>
@@ -70,19 +77,30 @@
 
         <div class="bcde-l-homepage__content col-md-11">
 
-          <h2>Finding new ways for innovators, developers, and government to work together.</h2>
+          <div class="row">
 
-          <p>The goals: grow B.C.'s tech economy, improve how government develops digital products, and make services for British Columbians better.</p>
+            <div class="col-md-6">
+              <h2>Finding new ways for innovators, developers, and government to work together.</h2>
 
-          <p>To those ends, the BC Developers' Exchange is:</p>
+              <p>The goals: grow B.C.'s tech economy, improve how government develops digital products, and make services for British Columbians better.</p>
 
-          <ul>
-            <li>Creating faster ways for the public sector to acquire software from the tech community</li>
-            <li>Matching the business needs of government organizations in B.C. with innovations from B.C.'s technology industry</li>
-            <li>Sharing government digital resources - code, data and APIs - that entrepreneurs can use to seed their businesses.</li>
-          </ul>
+              <p>To those ends, the BC Developers' Exchange is:</p>
 
-          <p><a href="" title="Learn more">Learn more</a></p>
+              <ul>
+                <li>Creating faster ways for the public sector to acquire software from the tech community</li>
+                <li>Matching the business needs of government organizations in B.C. with innovations from B.C.'s technology industry</li>
+                <li>Sharing government digital resources - code, data and APIs - that entrepreneurs can use to seed their businesses.</li>
+              </ul>
+
+              <p><a href="" title="Learn more">Learn more</a></p>
+            </div>
+
+            <div class="col-md-6">
+
+            </div>
+
+
+          </div>
 
         </div>
 
@@ -96,11 +114,18 @@
 
         <div class="bcde-l-homepage__content col-md-11">
 
-          <h2>Code with us.</h2>
-          <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire developers to cut the code government needs. Instead of a bunch of paperwork, developers work directly in GitHub and get paid a fixed fee if their code meets the acceptance criteria.</p>
-          <p>Read about what <a href="we've been learning">we've been learning</a> and how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a> to  find work.</p>
+          <div class="col-md-6">
+            <h2>Code with us.</h2>
+            <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire developers to cut the code government needs. Instead of a bunch of paperwork, developers work directly in GitHub and get paid a fixed fee if their code meets the acceptance criteria.</p>
+            <p>Read about what <a href="we've been learning">we've been learning</a> and how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a> to  find work.</p>
 
-          <p><a href="" title="Search Opportunities">Search Opportunities</a></p>
+            <p><a href="" title="Search Opportunities">Search Opportunities</a></p>
+          </div>
+
+          <div class="col-md-6">
+
+          </div>
+
         </div>
       </section>
 
