populate roadmap.html with content

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
       </header>
 
+
+
       <section class="bcde-l-homepage__section row">
 
         <div class="bcde-l-homepage__side col-md-1">
@@ -76,8 +78,6 @@
         </div>
 
         <div class="bcde-l-homepage__content col-md-11">
-
-          <div class="row">
 
             <div class="col-md-6">
               <h2>Finding new ways for innovators, developers, and government to work together.</h2>
@@ -99,9 +99,6 @@
 
             </div>
 
-
-          </div>
-
         </div>
 
       </section>
@@ -116,10 +113,16 @@
 
           <div class="col-md-6">
             <h2>Code with us.</h2>
-            <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire developers to cut the code government needs. Instead of a bunch of paperwork, developers work directly in GitHub and get paid a fixed fee if their code meets the acceptance criteria.</p>
-            <p>Read about what <a href="we've been learning">we've been learning</a> and how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a> to  find work.</p>
+            <p>We've been experimenting with <a href="" title="a new way">a new way</a> to hire
+              developers to cut the code government needs. Instead of a bunch of paperwork,
+              developers work directly in GitHub and get paid a fixed fee if their code meets
+              the acceptance criteria.</p>
 
-            <p><a href="" title="Search Opportunities">Search Opportunities</a></p>
+            <p>Read about what <a href="we've been learning">we've been learning</a> and
+              how we're evolving the model, or go directly to <a href="" title="Open Opportunities">Open Opportunities</a>
+              to  find work.</p>
+
+            <p><a class="btn btn-primary" href="" title="Search Opportunities">Search Opportunities</a></p>
           </div>
 
           <div class="col-md-6">
@@ -128,6 +131,9 @@
 
         </div>
       </section>
+
+
+
 
       <footer class="bcde-footer row">
 
