add roadmap.html layout mark up

--- a/roadmap.html
+++ b/roadmap.html
@@ -80,74 +80,80 @@
 
           <h1>Roadmap</h1>
 
+          <div class="row">
+            <div class="col-sm-9">
 
-          <h5>Contents</h5>
-          <ul>
-            <li>Introduction</li>
-            <li>Where Did the Roadmap Come From?</li>
-              How to Use This Roadmap</li>
-            <li>How to Contribute</li>
-          </ul>
+              <p>We are sharing our service roadmap as part of a concerted e ort to engage with B.C.’s tech community,
+                and to enable them to help shape, re ne and contribute to the development of the BCDevExchange.
+              </p>
 
-          <h5>The Epics</h5>
-          <ul>
-            <li>Kick Start</li>
-            <li>Sprint With Us</li>
-            <li>Code for Government Ready Products </li>
-            <li>Code With Us - Paid</li>
-          </ul>
+              <p>Early on, B.C.'s tech community told us we should build the BCDevExchange in collaboration; advice we have taken to heart.</p>
 
-          <p>We are sharing our service roadmap as part of a concerted e ort to engage with B.C.’s tech community,
-            and to enable them to help shape, re ne and contribute to the development of the BCDevExchange.
-          </p>
+              <p>From the beginning, we published the open source code that powers the BCDevExchange app in
+                GitHub, the popular online code sharing platform, and worked to openly share a growing number
+                of digital resources, including APIs, code and data.</p>
 
-          <p>Early on, B.C.'s tech community told us we should build the BCDevExchange in collaboration; advice we have taken to heart.</p>
+              <p>We are partnering with the developers, app builders, start-ups and public sector innovators;
+                those who we want as users of the BCDevExchange.</p>
 
-          <p>From the beginning, we published the open source code that powers the BCDevExchange app in
-            GitHub, the popular online code sharing platform, and worked to openly share a growing number
-            of digital resources, including APIs, code and data.</p>
-
-          <p>We are partnering with the developers, app builders, start-ups and public sector innovators;
-            those who we want as users of the BCDevExchange.</p>
-
-          <p>We invite you to see what we are doing, and we welcome your advice and contributions on
-            how to evolve the BCDevExchange.</p>
+              <p>We invite you to see what we are doing, and we welcome your advice and contributions on
+                how to evolve the BCDevExchange.</p>
 
 
-          <p>Where did the roadmap come from?</p>
+              <p>Where did the roadmap come from?</p>
 
-          <p>The BCDevExchange team is treating this initiative as a type of "lean start-up" e ort,
-            with a customer-centered service design and an Agile methodology. We build, test and
-            re ne based on our user’s feedback to ensure we deliver value to them.</p>
+              <p>The BCDevExchange team is treating this initiative as a type of "lean start-up" e ort,
+                with a customer-centered service design and an Agile methodology. We build, test and
+                re ne based on our user’s feedback to ensure we deliver value to them.</p>
 
-          <p>The roadmap was derived through work we did with our community last year, and may change based on further feedback from our community.</p>
+              <p>The roadmap was derived through work we did with our community last year, and may change based on further feedback from our community.</p>
 
-          <p>To create the roadmap, we  rst examined our research  ndings on common business needs in the
-             community. We then determined how we could meet those business needs with a range of services
-             that you will  nd in this roadmap.</p>
+              <p>To create the roadmap, we  rst examined our research  ndings on common business needs in the
+                 community. We then determined how we could meet those business needs with a range of services
+                 that you will  nd in this roadmap.</p>
 
-          <p>We realized that business needs could be grouped into cultural, process and technological
-            transformations with the objectives of accelerating the speed of delivering value and
-            increasing code quality.</p>
-
-
-          <p>  HOW TO USE THIS ROADMAP</p>
-
-          <p>In broad terms, this roadmap describes the potential services of the BCDevExchange.
-          These are the Epics – our big pieces of work. Each Epic has a high-level user story and
-          the stages we will follow, beginning with customer discovery and user research.</p>
-
-          <p>For more detail, each Epic is broken down into smaller user stories which can be viewed
-          and commented on in our Kanban boards. At the smaller user story level, you can  nd and
-          explore the tasks and associated artifacts related to each story.</p>
-
-          <p>These Kanban boards organize our user stories into three groups. Using Agile parlance we
-          have our product backlog, work currently underway during our current two-week development
-          sprint, and completed work.</p>
-
-          <p>To see what we’re working on please visit our Kanboard.</p>
+              <p>We realized that business needs could be grouped into cultural, process and technological
+                transformations with the objectives of accelerating the speed of delivering value and
+                increasing code quality.</p>
 
 
+              <p>  HOW TO USE THIS ROADMAP</p>
+
+              <p>In broad terms, this roadmap describes the potential services of the BCDevExchange.
+              These are the Epics – our big pieces of work. Each Epic has a high-level user story and
+              the stages we will follow, beginning with customer discovery and user research.</p>
+
+              <p>For more detail, each Epic is broken down into smaller user stories which can be viewed
+              and commented on in our Kanban boards. At the smaller user story level, you can  nd and
+              explore the tasks and associated artifacts related to each story.</p>
+
+              <p>These Kanban boards organize our user stories into three groups. Using Agile parlance we
+              have our product backlog, work currently underway during our current two-week development
+              sprint, and completed work.</p>
+
+              <p>To see what we’re working on please visit our Kanboard.</p>
+            </div>
+
+
+            <div class="col-sm-3">
+              <h5>Contents</h5>
+              <ul>
+                <li>Introduction</li>
+                <li>Where Did the Roadmap Come From?</li>
+                  How to Use This Roadmap</li>
+                <li>How to Contribute</li>
+              </ul>
+
+              <h5>The Epics</h5>
+              <ul>
+                <li>Kick Start</li>
+                <li>Sprint With Us</li>
+                <li>Code for Government Ready Products </li>
+                <li>Code With Us - Paid</li>
+              </ul>
+            </div>
+
+          </div>
         </div>
 
       </section>
